--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,8 @@ name: ml-workshop-intermediate-2-of-2
 channels:
   - conda-forge
 dependencies:
-  - python=3.8.*
-  - scikit-learn=0.24.*
-  - seaborn=0.11.*
-  - pandas=1.2.*
-  - jupyterlab=3.0.*
+  - python=3.9.7
+  - scikit-learn=1.0.*
+  - seaborn=0.11.2
+  - pandas
+  - jupyterlab=3.1.*
